examples/web-instrumentation/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-instrumentation
spec:
  type: NodePort
  selector:
    app: web-instrumentation
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
