examples/web-instrumentation/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-instrumentation-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: web-instrumentation
          servicePort: 80
